<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iron.hostingcontroll.ui.home.MainStats"
        android:label="@string/title_stats"
        tools:layout="@layout/main_stats_fragment" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.iron.hostingcontroll.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.iron.hostingcontroll.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_client_list"
        android:name="com.iron.hostingcontroll.ui.clients.ClientListFragment"
        android:label="@string/title_clients"
        tools:layout="@layout/client_list_fragment" />
</navigation>