<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="12"
    android:paddingVertical="8dp"
    android:paddingHorizontal="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainStats">

    <androidx.cardview.widget.CardView
        android:layout_weight="12"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        app:contentPadding="16dp"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorPrimary"
                style="@style/TextAppearance.AppCompat.Title"
                android:textSize="50sp"
                tools:text="300"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/colorPrimary"
                android:text="@string/label_total_clients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:weightSum="12"
                android:orientation="horizontal"
                android:layout_marginVertical="16dp"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtActive"
                        android:textColor="@color/colorSuccess"
                        style="@style/TextAppearance.AppCompat.Title"
                        tools:text="100"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="@color/colorSuccess"
                        android:textAlignment="center"
                        android:text="@string/label_actives"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtWarning"
                        android:textColor="@color/colorWarning"
                        style="@style/TextAppearance.AppCompat.Title"
                        tools:text="150"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="@color/colorWarning"
                        android:textAlignment="center"
                        android:text="@string/label_warning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtError"
                        android:textColor="@color/colorError"
                        style="@style/TextAppearance.AppCompat.Title"
                        tools:text="50"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:textColor="@color/colorError"
                        android:textAlignment="center"
                        android:text="@string/label_shutdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>